ERA Upgrade : Dynamic Style

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -12,9 +12,10 @@
  */
 
 // example mixin to set the text-selection style
-@mixin selection {
-    ::-moz-selection { @content; }
-    ::selection { @content; }
+@mixin selection 
+{
+    ::-moz-selection  { @content; }
+    ::selection       { @content; }
 }
 @include selection {
     color: white;
@@ -62,16 +63,16 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6, legend {
   font-weight: 300;
 }
 h1 {
-  font-size: 40px
+  font-size: 50px
 }
 h2 {
-  font-size: 30px;
+  font-size: 40px;
 }
 legend {
-  font-size: 20px;
+  font-size: 30px;
 }
 p {
-  font-size: 14px;
+  font-size: 18px;
   font-weight: 200;
   text-align: justify;
 }
@@ -81,7 +82,7 @@ p {
   font-weight: 300px;
 }
 #sidebar a {
-  font-size: 14px;
+  font-size: 16px;
   position: relative;
   z-index: 999;
 }
@@ -89,8 +90,8 @@ p {
   font-weight: 300;
 }
 .page-header.first-page-header {
-  font-size: 28px;
-  border-bottom: solid 3px;
+  font-size: 34px;
+  border-bottom: solid 4px;
 }
 // GLOBAL CONTAINER STYLES \\
 .main-content, #main-container .row-offcanvas {
@@ -105,9 +106,6 @@ p {
 }
 .ds-static-div.col-xs-2.col-sm-1 {
   display: none;
-}
-.row {
-  margin-top: 3%;
 }
 // GLOBAL BACKGROUND IMAGES \\
 #background-globe {
@@ -149,7 +147,7 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 // COMMUNITIES LIST \\
 .ds-static-div.row.community-browser-row a, a:visited {
   text-decoration: none;
-  font-size: 18px;
+  font-size: 22px;
   position: relative;
   z-index: 999;
 }
@@ -310,17 +308,17 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 }
 .ds-div-head,
 legend {
-  font-size: 30px;
+  font-size: 40px;
   color: #2b466b;
   font-weight: 400;
-  border-bottom: solid 3px;
+  border-bottom: solid 4px;
   padding-bottom: 3px;
 }
 .ds-list-head {
-  font-size: 30px;
+  font-size: 25px;
   color: #2b466b;
   font-weight: 400;
-  border-bottom: solid 3px;
+  border-bottom: solid 4px;
   padding-bottom: 3px;
 }
 .era-header {
@@ -333,8 +331,8 @@ legend {
   text-decoration: none;
 }
 .era-logos {
-  padding-bottom: 50px;
-  padding-top: 50px;
+  padding-bottom: 1.5%;
+  padding-top: 1.5%;
 }
 .breadcrumb {
   background-color: #aab8c6;
@@ -400,7 +398,7 @@ header .navbar-default .navbar-nav>li>a:focus {
 // GLOBAL FOOTER STYLES \\
 .footer-links {
   text-align: center;
-  font-size: 16px;
+  font-size: 18px;
 }
 .dl-horizontal dt {
 text-align: left;
@@ -703,8 +701,5 @@ ul.dropdown-menu a {
   border: none;
 }
 .nav-tabs>li>a:hover {
-  background-color: none;
-}
-#aspect_administrative_ControlPanel_list_options_sm_xs li:hover, a:hover {
   background-color: none;
 }
