Accessibility page added

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -376,7 +376,8 @@ fieldset {
 #aspect_administrative_item_FindItemForm_field_submit_find,
 #aspect_administrative_registries_MetadataRegistryMain_field_submit_add,
 #aspect_administrative_CurateForm_field_submit_curate_task,
-#aspect_administrative_item_CurateItemForm_field_submit_curate_task {
+#aspect_administrative_item_CurateItemForm_field_submit_curate_task,
+#aspect_administrative_community_CreateCommunityForm_field_submit_save {
   margin: 10px 0px;
 }
 
