--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -75,8 +75,13 @@ span {
 .navbar {
   background: #186599;
 }
-.navbar a:hover {
-  text-decoration: underline;
+.navbar a:hover,
+.hidden-xs:hover,
+header .navbar-default a :hover,
+.navbar a:hover, .hidden-xs:hover, 
+.list-group-item-heading h5:hover,
+a.list-group-item :hover {
+  text-decoration: none;
 }
 
 h1, h2, h3, h4, h5, span {
@@ -192,15 +197,11 @@ h4, h5 {
 header .navbar-default {
   background-color: #186599;
 }
-header .navbar-default a :hover {
-  text-decoration: underline;
-}
 .navbar-nav li {
   float: left;
   background-color: #186599;
 }
 .navbar-nav a :hover {
-  background-color: #186599;
   text-decoration: underline;
 }
 .dropdown-toggle span {
@@ -209,9 +210,7 @@ header .navbar-default a :hover {
 .dropdown-toggle:hover {
   background-color: transparent;
 }
-#user-dropdown-toggle span:hover {
-  background-color: #122538;
-}
+
 #auth-dropdown {
   background-color: #FFF;
 }
@@ -242,9 +241,10 @@ a.list-group-item {
 }
 a.list-group-item :hover{
   background-color: #ddf5fb;
-  text-decoration: underline;
 }
-.list-group-item.active, .list-group-item.active:hover, .list-group-item.active:focus {
+.list-group-item.active, 
+.list-group-item.active:hover, 
+.list-group-item.active:focus {
   z-index: 2;
   background-color: #186599;
   border-color: #186599;
@@ -350,7 +350,7 @@ a.list-group-item :hover {
   margin-bottom: 10px;
 }
 .item-page-field-wrapper {
-  border-bottom: dashed #e0ded2 1px;
+  border-bottom: solid #e0ded2 1px;
   margin: 0;
   padding: 5px 0;
 }
@@ -367,6 +367,7 @@ a.list-group-item :hover {
   margin: 25px 0;
 }
 .pdf-viewer {
+  border: solid #e0ded2 1px;
   margin: 20px 0px;
 }
 /* Item Admin Page */
