Fix reorganised dropdown ids Add new submission links to navigation Display access and item embargo on item view Minor styling

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -688,7 +688,7 @@ ul.dropdown-menu a {
 .ds-table-row.odd {
   opacity: 0.7;
 }
-.visible-xs div, .artifact-h-link a, div {
+.visible-xs div {
   font-weight: 300;
   font-size: 16px;
 }
