--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -46,7 +46,7 @@
     max-height: 500px;
     overflow-y: auto;
   }
-  #aspect_submission_StepTransformer_item_publication-title{
+  #aspect_submission_StepTransformer_item_publication-title {
     margin-bottom:5px;
   }
 }
@@ -90,6 +90,19 @@ p {
 .label-default {
   font-weight: 300;
 }
+
+.row {
+  font-weight: 300;
+}
+ul.ds-referenceSet-list a {
+  font-size: 16px;
+}
+#access-ul li {
+  color: #333;
+  font-size: 16px;
+  font-weight: 200;
+}
+/* GLOBAL CONTAINER STYLES */
 
 .page-header.first-page-header {
   font-size: 28px;
@@ -212,7 +225,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .bold a, a:visited,
 #p-underline a, a:visited,
 .ds-simple-list-item a, a:visited,
-.list-unstyled a, a:visited {
+.list-unstyled a, a:visited,
+#access-link a, a:visited {
   position: relative;
 }
 .artifact-title a:hover, a:focus, 
@@ -240,7 +254,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .bold a:hover, a:focus,
 #p-underline a:hover, a:focus,
 .ds-simple-list-item a:hover, a:focus,
-.list-unstyled a:hover, a:focus {
+.list-unstyled a:hover, a:focus,
+#access-link a:hover, a:focus {
   text-decoration: none;
 }
 .artifact-title a:after, a:visited:after, 
@@ -266,7 +281,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .bold a:after, a:visited::after,
 #p-underline a:after, a:visited::after,
 .ds-simple-list-item a::after, a:visited::after,
-.list-unstyled a::after, a:visited::after {
+.list-unstyled a::after, a:visited::after,
+#access-link a::after, a:visited::after {
   content: '';
   height: 2px;
   position: absolute;
@@ -300,7 +316,8 @@ header .breadcrumb.hidden-xs.hidden-sm a:hover:after, .breadcrumb.hidden-xs.hidd
 .bold a:hover::after, a:visited:hover::after,
 #p-underline a:hover::after, a:visited:hover::after,
 .ds-simple-list-item a:hover::after, a:visited:hover::after,
-.list-unstyled a:hover::after, a:visited:hover::after {
+.list-unstyled a:hover::after, a:visited:hover::after,
+#access-link a:hover::after, a:visited:hover::after {
   width: 100%;
 }
 .footer-links a::after, a:visited::after {
@@ -359,6 +376,12 @@ legend {
   background-color: #aab8c6;
   margin-bottom: 0px;
   padding: 18px 15px;
+  color: #fff;
+}
+#glyph-white,
+.glyphicon.glyphicon-home,
+.glyphicon.glyphicon-home i {
+  color: #fff;
 }
 .header-title {
   text-align: center;
@@ -631,7 +654,7 @@ a.list-group-item.active span {
   margin-bottom: 5px;
   font-size: 20px;
   position: relative;
-  //z-index: 999;
+  /*z-index: 999;*/
 }
 .community-browser-row {
   width: 200%;
