Fix sidebar Hide empty divs and H2s

--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -21,6 +21,11 @@
     color: white;
     background: cornflowerblue;
 }
+
+h2:empty, .list-group:empty {
+  display: none;
+}
+
 .publication-records-modal, .publication-records-modal ul {
   list-style-type: none;
   padding-left: 0px;
