--- a/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
+++ b/dspace/modules/xmlui-mirage2/src/main/webapp/themes/Mirage2/styles/_style.scss
@@ -76,11 +76,15 @@ header .navbar {
 /* For width 400px and larger: */
 @media only screen and (max-width: 415px) {
   header .navbar-brand img{
-    height: 55px;
+    height: 65px;
   }
 
   header .navbar {
     min-height: 80px;
+  }
+
+  h2 {
+    font-size: 22px;
   }
 }
 
